--- a/argocd-applications/argocd.yaml
+++ b/argocd-applications/argocd.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/argoflow/argoflow
-    targetRevision: HEAD
+    repoURL: https://github.com/ludgerpaehler/argoflow/tree/v0.1.0
+    targetRevision: test-deploy
     path: argocd
     kustomize:
       version: v4.0.5
