--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
 # - argocd-applications/rook-ceph.yaml
 # - argocd-applications/nginx.yaml
 # - argocd-applications/nvidia-gpu-operator.yaml
-- argocd-applications/argocd.yaml
+#- argocd-applications/argocd.yaml
 - argocd-applications/istio-operator.yaml
 - argocd-applications/istio.yaml
 # kubeflow
